[EDP-DDM-18804] change permission list to set
Change-Id: I47879f6b5eb4daaf2ba66dece8bc67ab16414b2c